--- a/src/assets/scss/config/_veriables.scss
+++ b/src/assets/scss/config/_veriables.scss
@@ -23,6 +23,7 @@ $gray4:#E6EFF5;
 $gray5:#EBEEF1;
 $text-grey:#808080;
 $warning: #bd7f06;
+$gray6:#E6EFF5;
 
 $white-light: #fcfcfc;
 $dark-blue: #062745;
