--- a/src/app/pages/dashboard/add-escrow/release-condition/release-condition.component.html
+++ b/src/app/pages/dashboard/add-escrow/release-condition/release-condition.component.html
@@ -87,29 +87,32 @@
     </form>
 </ng-template>
 <ng-template #finalConfirmation let-modal>
-    <div class="modal-body p-4 text-center">
+    <div class="modal-body p-4 text-center bg-grey">
         <div class="mb-3">
-            <div class="d-flex justify-content-center align-items-center mb-3" style="font-size: 2rem;">
-                <i class="bi bi-patch-check-fill text-primary"></i>
+            <div class="d-flex justify-content-center align-items-center mb-3">
+             <img src="assets/img/confirm.png">
             </div>
-            <h5 class="fw-bold">Final Confirmation Required</h5>
-            <div class="mt-3 text-start">
+            <h3>Final Confirmation Required</h3>
+            <div class="mt-3 text-start bg-white p-3 rounded-sm">
                 <div class="form-check mb-2">
                     <input class="form-check-input" type="checkbox" id="confirmCheck" [(ngModel)]="isConfirmed" />
                     <label class="form-check-label" for="confirmCheck">
-                        Before proceeding, please ensure the following:
-                        <ul class="mb-0">
-                            <li>All client details, agreements, deposit & release conditions are accurate and as per
+                        <strong class="mb-2">Before proceeding, please ensure the following:</strong> 
+                        <ul class="mb-0 ps-0">
+                            <li class="mb-3">All client details, agreements, deposit & release conditions are accurate and as per
                                 agreement.</li>
-                            <li>Once confirmed, login details will be sent to client. No further changes can be made.
-                            </li>
-                        </ul>
+                                </ul>
+                             <ul class="mb-0 ps-0">
+                            <li class="d-flex align-items-baseline gap-2"><i class="fa-solid fa-circle-exclamation"></i> Once confirmed, login details will be sent to client. No further changes can be made.</li>
+                                </ul>
+                 
+                      
                     </label>
                 </div>
             </div>
         </div>
         <div class="d-flex justify-content-center gap-2 mt-4">
-            <button class="btn btn-outline-secondary" (click)="modal.dismiss()">Review Again</button>
+            <button class="btn btn-bordered" (click)="modal.dismiss()">Review Again</button>
             <button class="btn btn-primary" [disabled]="!isConfirmed" (click)="confirmAndSend(modal)">Confirm &
                 Send</button>
         </div>
