--- a/src/app/pages/staff-management/role-management/role-list/role-list.component.html
+++ b/src/app/pages/staff-management/role-management/role-list/role-list.component.html
@@ -1,4 +1,6 @@
-<button class="btn btn-primary" [routerLink]="'/staff/add'"> Add Role</button>
+<button class="btn btn-primary add-role-btn" [routerLink]="'/staff/add'"> Add Role</button>
+<div class="user-box">
 <dynamic-table [apiUrl]="environment.baseUrl + 'roles/list'" [pageSize]="10" [showHeader]="false"
   [httpHeaders]="httpHeaders" [customParams]="customParams" (action)="onTableAction($event)">
 </dynamic-table>
+</div>
