--- a/src/assets/scss/pages/_user-manage.scss
+++ b/src/assets/scss/pages/_user-manage.scss
@@ -16,3 +16,9 @@
     font-size: 20px;
     margin-bottom: 17px; 
 }
+.user-box {
+    background: #fff;
+    border: 1px solid #E6EFF5;
+    border-radius: 10px;
+    padding: 1.5rem
+}
