--- a/src/app/pages/dashboard/edit-escrow/edit-escrow-details/edit-escrow-details.component.html
+++ b/src/app/pages/dashboard/edit-escrow/edit-escrow-details/edit-escrow-details.component.html
@@ -1,58 +1,34 @@
-<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-    <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="pills-deposit-tab" data-bs-toggle="pill" data-bs-target="#pills-deposit"
-            type="button" role="tab" aria-controls="pills-deposit" aria-selected="true">Deposit</button>
+<ul class="nav nav-pills mb-3">
+    <li class="nav-item">
+        <button class="nav-link" [class.active]="activeEntity === 'depositor'" (click)="setEntity('depositor')">
+            Depositor
+        </button>
     </li>
-    <li class="nav-item" role="presentation">
-        <button class="nav-link" id="pills-bene-tab" data-bs-toggle="pill" data-bs-target="#pills-bene"
-            type="button" role="tab" aria-controls="pills-bene" aria-selected="false">Beneficiary</button>
-    </li>
-</ul>
-
-
-<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
-    <li class="nav-item" role="presentation">
-        <button class="nav-link active" id="pills-basic-tab" data-bs-toggle="pill" data-bs-target="#pills-basic"
-            type="button" role="tab" aria-controls="pills-basic" aria-selected="true">Basic Details</button>
-    </li>
-    <li class="nav-item" role="presentation">
-        <button class="nav-link" id="pills-agreement-tab" data-bs-toggle="pill" data-bs-target="#pills-agreement"
-            type="button" role="tab" aria-controls="pills-agreement" aria-selected="false">Agreement</button>
-    </li>
-       <li class="nav-item" role="presentation">
-        <button class="nav-link" id="pills-teammembers-tab" data-bs-toggle="pill" data-bs-target="#pills-teammembers"
-            type="button" role="tab" aria-controls="pills-teammembers" aria-selected="false">Team Members</button>
-    </li>
-    <li class="nav-item" role="presentation">
-        <button class="nav-link" id="pills-deposit-tab" data-bs-toggle="pill" data-bs-target="#pills-deposit"
-            type="button" role="tab" aria-controls="pills-deposit" aria-selected="false">Deposit</button>
-    </li>
-    <li class="nav-item" role="presentation">
-        <button class="nav-link" id="pills-release-tab" data-bs-toggle="pill" data-bs-target="#pills-release"
-            type="button" role="tab" aria-controls="pills-release" aria-selected="false">Release</button>
-    </li>
-    <li class="nav-item" role="presentation">
-        <button class="nav-link" id="pills-certificate-tab" data-bs-toggle="pill" data-bs-target="#pills-certificate"
-            type="button" role="tab" aria-controls="pills-certificate" aria-selected="false">Certificate</button>
+    <li class="nav-item">
+        <button class="nav-link" [class.active]="activeEntity === 'beneficiary'" (click)="setEntity('beneficiary')">
+            Beneficiary
+        </button>
     </li>
 </ul>
-<div class="tab-content" id="pills-tabContent">
-    <div class="tab-pane fade show active" id="pills-basic" role="tabpanel" aria-labelledby="pills-basic-tab">
-        <app-view-basic-details />
-    </div>
-    <div class="tab-pane fade" id="pills-agreement" role="tabpanel" aria-labelledby="pills-agreement-tab">
-        <app-view-agreement />
-    </div>
-     <div class="tab-pane fade" id="pills-teammembers" role="tabpanel" aria-labelledby="pills-teammembers-tab">
-        <app-view-teammembers />
-    </div>
-    <div class="tab-pane fade" id="pills-deposit" role="tabpanel" aria-labelledby="pills-deposit-tab">
-        <app-view-deposit />
-    </div>
-    <div class="tab-pane fade" id="pills-release" role="tabpanel" aria-labelledby="pills-release-tab">
-        <app-view-release />
-    </div>
-    <div class="tab-pane fade" id="pills-certificate" role="tabpanel" aria-labelledby="pills-certificate-tab">
-        <app-view-certificate />
-    </div>
+<ul class="nav nav-pills mb-3">
+    <li class="nav-item" *ngFor="let tab of subTabs">
+        <button class="nav-link" [class.active]="activeSubTab === tab.label" (click)="setSubTab(tab.label)">
+            {{ tab.label }}
+        </button>
+    </li>
+</ul>
+<div class="tab-content p-3 border rounded">
+    <ng-container [ngSwitch]="activeSubTab">
+
+        <app-view-basic-details *ngSwitchCase="'Basic Details'" [userType]="activeEntity" />
+        <app-view-agreement *ngSwitchCase="'Agreement'" />
+        <app-view-teammembers *ngSwitchCase="'Team Members'" />
+        <app-view-deposit *ngSwitchCase="'Deposit'" />
+
+        <app-view-release *ngSwitchCase="'Release'" />
+        <app-view-certificate *ngSwitchCase="'Certificate'" />
+
+        <div *ngSwitchDefault>Select a tab</div>
+
+    </ng-container>
 </div>
