--- a/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-agreement/view-agreement.component.html
+++ b/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-agreement/view-agreement.component.html
@@ -18,13 +18,14 @@
                 </h4>
                 <div><i class="bi bi-eye" role="button"></i></div>
                 <div class="d-flex gap-3">
-                    <button class="border-0 bg-transparent"><img src="assets/img/view.png"></button>
-                    <button class="border-0 bg-transparent" aria-label="Refresh">
+                    <button class="border-0 bg-transparent" (click)="openInNewTab(agreements?.document_path)"><img
+                            src="assets/img/view.png"></button>
+                    <!-- <button class="border-0 bg-transparent" aria-label="Refresh">
                         <i class="fas fa-sync-alt"></i>
                     </button>
                     <button class="border-0 bg-transparent" aria-label="Share">
                         <i class="fas fa-sign-out-alt"></i>
-                    </button>
+                    </button> -->
                 </div>
             </div>
         </div>
@@ -47,7 +48,7 @@
                 <h4 class="user-details">
                     <p class="py-2 mb-0"><strong>Expiry Date</strong></p>{{ agreements?.expiry_date }}
                 </h4>
-                <div><i class="bi bi-eye" role="button"></i></div>
+                <div><i class="bi bi-eye" role="button" (click)="openInNewTab(agreements?.document_path)"></i></div>
             </div>
         </div>
     </div>
