--- a/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-teammembers/view-teammembers.component.html
+++ b/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-teammembers/view-teammembers.component.html
@@ -1,1 +1,9 @@
-<p>view-teammembers works!</p>
+<div class="d-flex justify-content-between my-3">
+    <h5 class="mt-3 text-primary">Team Members</h5>
+</div>
+
+<div class="deposit-table gap-4 p-3 mt-3" *ngIf="_EditEscrowService.escrowDetails">
+    <dynamic-table [showHeader]="false" [apiUrl]="environment.baseUrl + 'escrow/team-member'" [pageSize]="10" [httpHeaders]="httpHeaders"
+      [customParams]="customParams"  (action)="onTableAction($event)">
+    </dynamic-table>
+</div>
