--- a/src/app/pages/dashboard/edit-escrow/edit-escrow.component.html
+++ b/src/app/pages/dashboard/edit-escrow/edit-escrow.component.html
@@ -33,8 +33,8 @@
     <div class="card-main mb-4 p-4 pb-5">
         <div class="d-flex align-items-center step-tracker"
             *ngIf="_EditEscrowService.currentStep$ | async as currentStep">
-            <div *ngFor="let step of _EditEscrowService.steps; let i = index"
-                [ngClass]="{'flex-fill': i != _EditEscrowService.steps.length - 1 }"
+            <div *ngFor="let step of _EditEscrowService.viewSteps; let i = index"
+                [ngClass]="{'flex-fill': i != _EditEscrowService.viewSteps.length - 1 }"
                 class="step-wrapper d-flex align-items-center">
 
                 <!-- Circle -->
@@ -61,6 +61,6 @@
         </div>
     </div>
 
-  <app-edit-escrow-details />
+    <app-edit-escrow-details />
 </div>
 <!-- Deposit Form -->
