Worked on css changes on view Escrow

--- a/src/assets/scss/pages/_pages.scss
+++ b/src/assets/scss/pages/_pages.scss
@@ -1,4 +1,6 @@
 @use "login";
 @use "dashboard";
 @use "select-service";
-@use "user-manage"
+@use "user-manage";
+@use "escrow";
+@use "view-certificate";
