--- a/src/app/pages/dashboard/edit-escrow/edit-escrow.component.html
+++ b/src/app/pages/dashboard/edit-escrow/edit-escrow.component.html
@@ -49,7 +49,7 @@
                         <span *ngIf="step.step === currentStep" style="color:#062745;">●</span>
                         <span *ngIf="step.step > currentStep" style="color:#E6EFF5;">○</span>
                     </div>
-                    <div class="mt-2 position-absolute">{{ step.name }}</div>
+                    <div class="mt-2 position-absolute stepname">{{ step.name }}</div>
                 </div>
 
                 <!-- Line (not after last step) -->
