--- a/src/app/pages/release/release-action/release-action.component.html
+++ b/src/app/pages/release/release-action/release-action.component.html
@@ -1,9 +1,9 @@
 <div class="modal-header">
-    <h5 class="modal-title">Take Action</h5>
+    <h2 class="modal-title w-100 text-center">Take Action</h2>
     <button type="button" class="btn-close" aria-label="Close" (click)="activeModal.dismiss()"></button>
 </div>
 
-<div class="modal-body" [formGroup]="releaseForm">
+<div class="modal-body p-4" [formGroup]="releaseForm">
     <div class="mb-3">
         <label class="form-label">Select Release Request</label>
         <div class="d-flex gap-4 flex-wrap">
@@ -20,7 +20,8 @@
         <label class="form-label">Upload Document</label>
         <label class="file-upload d-block p-3 border rounded text-center cursor-pointer">
             <input type="file" hidden (change)="onFileSelected($event)" />
-            <span class="upload-button fw-semibold text-primary">📤 Upload Document</span>
+            <span class="upload-button fw-semibold text-primary"><img src="assets/img/upload.png" class="pe-2">
+                 Upload Document</span>
 
             <div *ngIf="uploadedFile" class="mt-2">
                 <span class="file-name text-dark fw-normal">{{ uploadedFile.name }}</span>
@@ -28,7 +29,7 @@
 
             <div *ngIf="fileUrl" class="mt-1">
                 <a [href]="fileUrl" target="_blank" class="btn btn-sm btn-outline-primary">
-                    👁️ View Uploaded Document
+                    <img src="assets/img/upload.png"> View Uploaded Document
                 </a>
             </div>
         </label>
@@ -42,7 +43,7 @@
     </div>
 </div>
 
-<div class="modal-footer">
+<div class="modal-footer justify-content-center">
     <button class="btn btn-outline-secondary" (click)="activeModal.dismiss()">Cancel</button>
     <button class="btn btn-primary" (click)="submit()">Submit</button>
 </div>
