--- a/src/app/pages/release/release.component.html
+++ b/src/app/pages/release/release.component.html
@@ -1,6 +1,5 @@
-<div class="d-flex justify-content-between my-3">
-  <h5 class="mt-3 text-primary">Release Requests</h5>
-  <button class="btn btn-primary" (click)="CreateReleaseRequest()">Add Release Requests</button>
+<div class="pb-2">
+  <button class="btn btn-primary add-role-btn " (click)="CreateReleaseRequest()">Add Release Requests</button>
 </div>
 
 <div class="deposit-table gap-4 p-3 mt-3">
