--- a/src/assets/scss/pages/_release-req.scss
+++ b/src/assets/scss/pages/_release-req.scss
@@ -1,3 +1,7 @@
+@use "../config/veriables" as *;
+@use "../config/mixins" as *;
+@use "../config/extends" as *;
+
 
 .release-container {
   background-color: #ffffff;
