--- a/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-basic-details/view-basic-details.component.html
+++ b/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-basic-details/view-basic-details.component.html
@@ -1,4 +1,4 @@
-<div class="card-main m-4 p-4">
+<div class="card-main p-4">
         <div>
             <h5 class="my-3">Company Details</h5>
             <div class="d-flex gap-5">
