--- a/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-release/view-release.component.html
+++ b/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-release/view-release.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex justify-content-between my-3">
+<div class="d-flex justify-content-end mb-3">
   <button class="btn btn-primary" (click)="CreateReleaseRequest()">Release Request</button>
 </div>
 <div class="release-container">
