Worked on changes

--- a/src/app/pages/dashboard/dashboard-list/dashboard-list.component.html
+++ b/src/app/pages/dashboard/dashboard-list/dashboard-list.component.html
@@ -1,7 +1,6 @@
   <div class="notification">
         <div><img src="assets/img/notification.png" alt="sprintexcode"></div>
-        <p class="mb-0">A new beneficiary has been added/linked. Please begin the process by clicking on the draft card
-          below. or <a href="#">Click Here To Start.</a></p>
+        <p class="mb-0">New update received. Please review and take action.<a>Click Here To Start.</a></p>
       </div>
       <div class="row">
              <div class="col-12 col-lg-4">
