--- a/src/app/pages/top-bar/top-bar.component.html
+++ b/src/app/pages/top-bar/top-bar.component.html
@@ -19,9 +19,8 @@
               <i class="fas fa-chevron-down ms-2"></i>
             </button>
             <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="dropdownMenuButton2">
-              <li><a class="dropdown-item active" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item active" >Profile</a></li>
+              <li><a class="dropdown-item" (click)="logOut()" >Logout</a></li>
             </ul>
           </div>
         </li>
