--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,4 +1,4 @@
-<div class="login-right w-100 m-auto">
+<div class="login-right w-75 m-auto">
   <div class="auth-page-content py-3 px-4">
     <h2 class="font-large text-center text-primary">Password Reset</h2>
     <p class="text-center text-grey py-2">
@@ -15,5 +15,6 @@
     </div>
 
     <button type="submit" class="btn btn-primary w-100" (click)="SubmitForm()"> Submit </button>
+        <button type="submit" class="btn btn-bordered w-100 mt-3"> Cancel </button>
   </form>
 </div>
