--- a/src/app/pages/sidebar/sidebar.component.html
+++ b/src/app/pages/sidebar/sidebar.component.html
@@ -13,16 +13,14 @@
       </a>
     </li> -->
 <div class="sidebar offcanvas offcanvas-start offcanvas-lg" tabindex="-1" id="responsiveSidebar">
-  <div class="text-center py-4 d-none d-lg-block">
+  <div class="text-center py-4 d-none d-lg-block"> 
     <img src="assets/img/logo-red.png" alt="Logo">
   </div>
   <div class="offcanvas-header d-lg-none">
     <h5 class="offcanvas-title">
-      <img src="assets/img/logo-red.png" alt="Logo">
+      <img src="assets/img/logo-red.png" alt="Logo" >
     </h5>
-    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close">
-
-    </button>
+    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
   </div>
   <div class="offcanvas-body">
     <ul class="nav flex-column w-100 ps-height">
