--- a/src/app/pages/top-bar/top-bar.component.html
+++ b/src/app/pages/top-bar/top-bar.component.html
@@ -3,11 +3,15 @@
     <div class="d-flex justify-content-between align-items-center">
       <h5 class="text-primary m-0">Welcome {{this._AuthCoreService.user()?.name}}</h5>
       <ul class="navbar-item d-flex align-items-center mb-0 gap-3">
-        <li>
-          <div class="position-relative"><i class="fa-regular fa-bell"></i><span class="badge-notification">0</span>
-          </div>
-        </li>
-        <li>
+            <!-- <li>
+            <div class="position-relative"><i class="fa-regular fa-bell"></i><span class="badge-notification">0</span>
+            </div>
+          </li>
+          <li><i class="fa-regular fa-circle-user"></i></li> -->
+          <li><a href="" (click)="logOut()" class="text-primary"><i class="fas fa-power-off"></i></a></li>
+
+  
+        <!-- <li>
           <div class="dropdown profile">
             <button type="button" data-toggle="dropdown" class="btn m-0 p-0 border-0 d-flex align-items-center gap-2"
               type="button" id="dropdownMenuButton2" data-bs-toggle="dropdown" aria-expanded="false">
@@ -23,7 +27,7 @@
               <li><a class="dropdown-item" (click)="logOut()" >Logout</a></li>
             </ul>
           </div>
-        </li>
+        </li> -->
       </ul>
     </div>
 
